--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "http-utils",
+  "name": "http-enums",
   "version": "1.0.0",
   "description": "HTTP status, methods, headers",
   "main": "dist/index.js",
